@@ -1,5 +1,5 @@
 #
-# SNMPTT v1.0 Configuration File
+# SNMPTT v1.1beta1 Configuration File
 #
 # Linux / Unix
 #
